--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,4 @@
-<header>
-  <h1>Super Manga</h1>
-  <button (click)="auth.signIn()" >sign in</button>
-</header>
+<app-header></app-header>
 <main>
   <div *ngFor="let manga of mangas">
 <span><strong>{{manga.title}}</strong></span>
